--- a/DuskMod.csproj
+++ b/DuskMod.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>C:\Users\Dennis\Downloads\20MTD mods\DuskMod\plugin</OutputPath>
+    <OutputPath></OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -313,5 +313,9 @@
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\20MinuteTillDawn\MinutesTillDawn_Data\Managed\UnityEngine.XRModule.dll</HintPath>
     </Reference>
   </ItemGroup>
+  
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="set TargetDir=&quot;C:\Program Files (x86)\Steam\steamapps\common\20MinuteTillDawn\BepInEx\plugins\&quot;&#xD;&#xA;copy /Y &quot;$(SolutionDir)bin\Debug\netstandard2.0\$(AssemblyName).dll&quot; %25TargetDir%25&#xD;&#xA;" />
+  </Target>
   
 </Project>
